testing if greek works in quotes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <table>
     <tr>
-      <td>Φακές</td>
+      <td>"Φακές"</td>
       <td><div ><img src="images/fakes.jpg" class="img"></div></td>
     </tr>
     <tr>
