<meta charset="UTF-8">

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Menu</title>
 <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 
 <table>
     <tr>
-      <td>"Φακές"</td>
+      <td>Φακές</td>
       <td><div ><img src="images/fakes.jpg" class="img"></div></td>
     </tr>
     <tr>
