added tsipoures again

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <td><img  src="images/fish sticks.jpg" class="img"></td>
     </tr>
     <tr>
+        <td>Τσιπούρες</td>
+        <td><img  src="images/tsipoures.jpg" class="img"></td>
+    </tr>
+    <tr>
         <td>Κοτόπουλο μανέστρα</td>
         <td><img  src="images/kotopoulo manestra.jpg" class="img"></td>
     </tr>
