--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 <body>
 
 <h1>Menu</h1>
-<h2>back to preview branch</h2>
+<h2>Σαλάτες</h2>
+<table>
+    <tr>
+      <td>Ντάκος</td>
+      <td><div ><img src="images/ntakos.jpg" class="img"></div></td>
+    </tr>
+    <tr>
+        <td>Λάχανο-μαρούλι</td>
+        <td><div ><img src="images/salata-lahano-karoto.jpg" class="img"></div></td>
+    </tr>
+    <tr>
+        <td>Αγγουροσαλάτα</td>
+        <td><div ><img src="images/aggourosalata.jpg" class="img"></div></td>
+    </tr>
+</table>
 
+<h2>Κυρίως πιάτα</h2>
 
 <table>
     <tr>
