--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <td>Αγγουροσαλάτα</td>
         <td><div ><img src="images/aggourosalata.jpg" class="img"></div></td>
     </tr>
+    <tr>
+        <td>Τζατζίκι</td>
+        <td><div ><img src="images/aggourosalata.jpg" class="img"></div></td>
+    </tr>
 </table>
 
 <h2>Κυρίως πιάτα</h2>
