--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td>Τζατζίκι</td>
-        <td><div ><img src="images/aggourosalata.jpg" class="img"></div></td>
+        <td><div ><img src="images/tzatziki.jpg" class="img"></div></td>
     </tr>
 </table>
 
@@ -66,7 +66,11 @@
     </tr>
     <tr>
         <td>Κοτόπουλο μανέστρα</td>
-        <td><img  src="images/kotopoulo manestra.jpg" class="img"></td>
+        <td>
+            <a href="https://akispetretzikis.com/recipe/5735/gioyvetsi-kotopoylo">
+                <img  src="images/kotopoulo manestra.jpg" class="img">
+            </a>
+        </td>
     </tr>
     <tr>
         <td>Μακαρόνια με Κοτόπουλο a la creme</td>
