--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </table>
 
 
-  <h2>Επιδόρπια</h2>
+  <h2>επιδορπια</h2>
 
 
 <table>
@@ -104,6 +104,13 @@
         </a>
       </td>
     </tr>
+    <tr>
+        <td>crepes</td>
+        <td>
+              <img  src="images/crepes better than dads.jpg" class="img">
+          </a>
+        </td>
+      </tr>
 </table>
 
 </body>
