--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <h2>Σαλάτες</h2>
 <table>
     <tr>
-      <td>Ντάκος</td>
-      <td><div ><img src="images/ntakos.jpg" class="img"></div></td>
+      <td><h3>Ντάκος</h3></td>
+      <td> <a href = "https://akispetretzikis.com/recipe/649/krhtikos-ntakos">
+        <div ><img src="images/ntakos.jpg" class="img"></div></a></td>
     </tr>
     <tr>
         <td>Λάχανο-μαρούλι</td>
@@ -33,7 +34,8 @@
 
 <table>
     <tr>
-      <td>Φακές</td>
+      <td>
+        <p>Φακές</p></td>
       <td><div ><img src="images/fakes.jpg" class="img"></div></td>
     </tr>
     <tr>
@@ -108,6 +110,20 @@
         <td>crepes</td>
         <td>
               <img  src="images/crepes better than dads.jpg" class="img">
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td><h3>sovlakia froton</h3></td>
+        <td>
+              <img  src="images/souvlakia_frouton.jpg" class="img">
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td><h3>μπουκίτσες μπανάνα</h3></td>
+        <td>
+              <img  src="images/boukitses_banana.webp" class="img">
           </a>
         </td>
       </tr>
