added img zoom on hover

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <tr>
       <td><h3>Ντάκος</h3></td>
       <td> <a href = "https://akispetretzikis.com/recipe/649/krhtikos-ntakos">
-        <div ><img src="images/ntakos.jpg" class="img"></div></a></td>
+        <div class = "zoom"><img src="images/ntakos.jpg" class="img"></div></a></td>
     </tr>
     <tr>
         <td>Λάχανο-μαρούλι</td>
-        <td><div ><img src="images/salata-lahano-karoto.jpg" class="img"></div></td>
+        <td><div class = "zoom"><img src="images/salata-lahano-karoto.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Αγγουροσαλάτα</td>
-        <td><div ><img src="images/aggourosalata.jpg" class="img"></div></td>
+        <td><div class="zoom"><img src="images/aggourosalata.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Τζατζίκι</td>
-        <td><div ><img src="images/tzatziki.jpg" class="img"></div></td>
+        <td><div class="zoom"><img src="images/tzatziki.jpg" class="img"></div></td>
     </tr>
 </table>
 
@@ -34,99 +34,114 @@
 
 <table>
     <tr>
-      <td>
-        <p>Φακές</p></td>
-      <td><div ><img src="images/fakes.jpg" class="img"></div></td>
+      <td>Φακές </td>
+      <td><div class="zoom"><img src="images/fakes.jpg" class="img"></td></div>
     </tr>
     <tr>
       <td>Φασολάδα</td>
-      <td><img src="images/fasolada.jpg" class="img"></td>
+      <td><div class="zoom"><img src="images/fasolada.jpg" class="img"></td></div>
     </tr>
     <tr>
         <td>Αρακάς με πατάτες</td>
-        <td><img  src="images/arakas me patates.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/arakas me patates.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Κοτόπουλο Yakitori</td>
-        <td><img  src="images/yakitori chicken.png" class="img"></td>
+        <td><div class="zoom"><img  src="images/yakitori chicken.png" class="img"></div></td>
     </tr> 
     <tr>
         <td>Κοτόσουπα</td>
-        <td><img  src="images/kotosoupa.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/kotosoupa.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Γιουβαρλάκια</td>
-        <td><img  src="images/giouvarlakia.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/giouvarlakia.jpg" class="img"></div></td>
     </tr> 
     <tr>
         <td>Ψαροκροκέτες</td>
-        <td><img  src="images/fish sticks.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/fish sticks.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Τσιπούρες</td>
-        <td><img  src="images/tsipoures.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/tsipoures.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Κοτόπουλο μανέστρα</td>
-        <td>
+        <td><div class="zoom">
             <a href="https://akispetretzikis.com/recipe/5735/gioyvetsi-kotopoylo">
                 <img  src="images/kotopoulo manestra.jpg" class="img">
-            </a>
+            </a></div>
         </td>
     </tr>
     <tr>
         <td>Μακαρόνια με Κοτόπουλο a la creme</td>
-        <td><img  src="images/kotopoulo a la creme.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/kotopoulo a la creme.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Μοσχαράκι μανέστρα</td>
-        <td><img  src="images/mosxaraki manestra.jpg" class="img" ></td>
+        <td><div class="zoom"><img  src="images/mosxaraki manestra.jpg" class="img" ></div></td>
     </tr>
     <tr>
         <td>Τηγανιτά αυγά</td>
-        <td><img  src="images/fried eggs.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/fried eggs.jpg" class="img"></div></td>
     </tr>
     <tr>
         <td>Πιπεριά-τυρί-ντομάτα</td>
-        <td><img  src="images/feta ntomata piperia.jpg" class="img"></td>
+        <td><div class="zoom"><img  src="images/feta ntomata piperia.jpg" class="img"></div></td>
     </tr> 
+    <tr>
+      <td>Ριζότο με μανιτάρια</td>
+      <td><div class="zoom"><img  src="images/rizoto-manitaria.jpg" class="img"></div></td>
+  </tr>
+  <tr>
+      <td>Γεμιστά</td>
+      <td><div class="zoom"><img  src="images/gemista-kima.jpg" class="img"></div></td>
+  </tr> 
        
   </table>
 
 
-  <h2>επιδορπια</h2>
+  <h2>Επιδόρπια</h2>
 
 
 <table>
+  <tr>
+    <td>σουβλάκια φρούτων</td>
+    <td>
+      <div class="zoom"><img  src="images/souvlakia_frouton.jpg" class="img"></div>
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td></td>μπουκίτσες μπανάνα</td>
+    <td>
+      <div class="zoom"><img  src="images/boukitses_banana.webp" class="img"></div>
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>κρέμα σιμιγδάλι</td>
+    <td>
+        <div class="zoom"><img  src="images/krema_simigdali.jpg" class="img"></div>
+      </a>
+    </td>
+  </tr>
     <tr>
       <td>Κέικ</td>
       <td>
         <a href="https://www.argiro.gr/recipe/keik-vanilia/">
-            <img  src="images/keik.jpg" class="img">
+          <div class="zoom"><img  src="images/keik.jpg" class="img"></div>
         </a>
       </td>
     </tr>
     <tr>
         <td>crepes</td>
         <td>
-              <img  src="images/crepes better than dads.jpg" class="img">
+          <div class="zoom"><img  src="images/crepes better than dads.jpg" class="img"></div>
           </a>
         </td>
       </tr>
-      <tr>
-        <td><h3>sovlakia froton</h3></td>
-        <td>
-              <img  src="images/souvlakia_frouton.jpg" class="img">
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td><h3>μπουκίτσες μπανάνα</h3></td>
-        <td>
-              <img  src="images/boukitses_banana.webp" class="img">
-          </a>
-        </td>
-      </tr>
+    
 </table>
 
 </body>
