added salata haloumi rodi

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Σαλάτες</h2>
 <table>
     <tr>
-      <td><h3>Ντάκος</h3></td>
+      <td>Ντάκος</td>
       <td> <a href = "https://akispetretzikis.com/recipe/649/krhtikos-ntakos">
         <div class = "zoom"><img src="images/ntakos.jpg" class="img"></div></a></td>
     </tr>
@@ -27,6 +27,14 @@
         <td>Τζατζίκι</td>
         <td><div class="zoom"><img src="images/tzatziki.jpg" class="img"></div></td>
     </tr>
+    <tr>
+      <td>Σαλάτα με χαλούμι και ρόδι</td>
+      <td><div class="zoom">
+        <a href="https://icooktoheal.com/prasini-salata-me-haloumi-kai-sws-meliou/">
+          <img src="images/salata-haloumi-rodi.jpg" class="img">
+        </a>
+        </div></td>
+  </tr>
 </table>
 
 <h2>Κυρίως πιάτα</h2>
@@ -97,11 +105,15 @@
       <td>Γεμιστά</td>
       <td><div class="zoom"><img  src="images/gemista-kima.jpg" class="img"></div></td>
   </tr> 
+  <tr>
+    <td>Σπετσοφάι</td>
+    <td><div class="zoom"><img  src="images/spetsofai.jpg" class="img"></div></td>
+</tr> 
        
   </table>
 
 
-  <h2>Επιδόρπια</h2>
+  <h2>Σνάκς/Επιδόρπια</h2>
 
 
 <table>
@@ -116,6 +128,13 @@
     <td></td>μπουκίτσες μπανάνα</td>
     <td>
       <div class="zoom"><img  src="images/boukitses_banana.webp" class="img"></div>
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>ρολάκια τορτίγιας</td>
+    <td>
+        <div class="zoom"><img  src="images/rolakia-tortigias.jpg" class="img"></div>
       </a>
     </td>
   </tr>
