--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
         <td><div class="zoom"><img  src="images/arakas me patates.jpg" class="img"></div></td>
     </tr>
     <tr>
+        <td>Noodles με λαχανικά στο τηγάνι</td>
+        <td><div class="zoom">
+          <a href="https://akispetretzikis.com/recipe/4725/noodles-me-lachanika">
+            <img  src="images/noodles-lo-mein-in-black-pan.jpg" class="img"></div></td>
+            </a>
+    </tr> 
+    <tr>
         <td>Κοτόπουλο Yakitori</td>
         <td><div class="zoom"><img  src="images/yakitori chicken.png" class="img"></div></td>
     </tr> 
@@ -99,7 +106,11 @@
     </tr> 
     <tr>
       <td>Ριζότο με μανιτάρια</td>
-      <td><div class="zoom"><img  src="images/rizoto-manitaria.jpg" class="img"></div></td>
+      <td><div class="zoom">
+        <a href="https://www.argiro.gr/recipe/rizoto-me-manitaria/">
+        <img  src="images/rizoto-manitaria.jpg" class="img">
+        </a>
+      </div></td>
   </tr>
   <tr>
       <td>Γεμιστά</td>
@@ -138,6 +149,14 @@
       </a>
     </td>
   </tr>
+  <tr>
+    <td>Smoothie μήλο-μπανάνα-γάλα</td>
+    <td><div class="zoom"><img  src="images/banana-smoothie.jpg" class="img"></div></td>
+</tr> 
+<tr>
+  <td>Smoothie μήλο-γιαούρτι-καρύδια-μέλι</td>
+  <td><div class="zoom"><img  src="images/smoothie-apple-yoghourt.png" class="img"></div></td>
+</tr> 
   <tr>
     <td>κρέμα σιμιγδάλι</td>
     <td>
