fixed broken collumn(banana) & added background

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles.css">
 <meta charset="UTF-8">
 </head>
-<body>
+<body class = bgimg>
 
 <h1>Menu</h1>
 <h2>Σαλάτες</h2>
@@ -136,9 +136,9 @@
     </td>
   </tr>
   <tr>
-    <td></td>μπουκίτσες μπανάνα</td>
+    <td>μπουκίτσες μπανάνα</td>
     <td>
-      <div class="zoom"><img  src="images/boukitses_banana.webp" class="img"></div>
+          <div class="zoom"><img  src="images/boukitses_banana.webp" class="img"></div>
       </a>
     </td>
   </tr>
