--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
           </a>
         </td>
       </tr>
+      <tr>
+        <td>λουκανικοπιτάκια</td>
+        <td>
+          <div class="zoom"><img  src="images/loukanikopitakia.jpg" class="img"></div>
+          </a>
+        </td>
+      </tr>
     
 </table>
 
